Make code more testable

--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -129,7 +129,7 @@
                 <div class="form-actions">
                     <div class="form-horizontal">
                         <div class="pull-right">
-                            <button type="submit" class="btn btn-primary">{{ 'issue.form.create'|trans }}</button>
+                            <button type="submit" name="_submit" class="btn btn-primary">{{ 'issue.form.create'|trans }}</button>
                             <button type="button" class="btn" onclick="window.history.back();">{{ 'issue.form.cancel'|trans }}</button>
                         </div>
                         <div class="control-group">
