--- a/src/PMT/WebBundle/Resources/views/Project/createForm.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/createForm.html.twig
@@ -1,13 +1,13 @@
 {% extends "PMTWebBundle::layout.html.twig" %}
 
-{% block content_title %}New project{% endblock %}
+{% block content_title %}{{ 'project.form.new' }}{% endblock %}
 
 {% block content_actions %}{% endblock %}
 
 {% block content %}
-    <div class="row-fluid">
-        {{ form_errors(form) }}
-        <form action="{{ path('pmtweb_project_form') }}" method="post" {{ form_enctype(form) }}>
+    <form action="{{ path('pmtweb_project_form') }}" method="post" {{ form_enctype(form) }}>
+        <div class="row-fluid">
+            {{ form_errors(form) }}
             <div class="span8">
                 <div class="accordion">
                     <div class="accordion-group">
@@ -94,8 +94,6 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
         <div class="row-fluid">
@@ -103,16 +101,15 @@
                 <div class="form-actions">
                     <div class="form-horizontal">
                         <div class="pull-right">
-                            <button type="submit" class="btn btn-primary">Save changes</button>
+                            <button type="submit" name="_submit" class="btn btn-primary">Save changes</button>
                             <button type="button" class="btn" onclick="window.history.back();">Cancel</button>
                         </div>
                     </div>
                 </div>
             </div>
             {{ form_rest(form) }}
-        </form>
-
-    </div>
+        </div>
+    </form>
 {% endblock %}
 
 {% block body_scripts %}
