--- a/src/PMT/WebBundle/Resources/views/User/profile.html.twig
+++ b/src/PMT/WebBundle/Resources/views/User/profile.html.twig
@@ -56,7 +56,7 @@
                     </div>
                     <div id="accordion_stream" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'simple'} %}
+                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'simple', 'activity': []} %}
                         </div>
                     </div>
                 </div>
