--- a/src/PMT/WebBundle/Resources/views/Comment/list.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Comment/list.html.twig
@@ -6,7 +6,7 @@
     <ul class="activity-stream advanced">
         <li class="media">
             <a class="pull-left" href="{{ path('pmtweb_user_profile', {'username': 'NoUseFreak'}) }}">
-                <img class="media-object avatar avatar-medium" src="https://si0.twimg.com/profile_images/2364006435/u0tai5lvqeegtbxkepjq_bigger.png">
+                <img class="media-object avatar avatar-medium" src="{{ gravatar('dries@nousefreak.be') }}">
             </a>
             <div class="media-body">
                 <ul>
@@ -31,7 +31,7 @@
         </li>
         <li class="media">
             <a class="pull-left" href="{{ path('pmtweb_user_profile', {'username': 'denhul'}) }}">
-                <img class="media-object avatar avatar-medium" src="https://si0.twimg.com/profile_images/3059818588/f3f18ee7ecbf043ff34a3a0e1b41013c_bigger.jpeg">
+                <img class="media-object avatar avatar-medium" src="{{ gravatar('dries2@nousefreak.be') }}">
             </a>
             <div class="media-body">
                 <ul>
@@ -48,7 +48,7 @@
         </li>
         <li class="media">
             <a class="pull-left" href="{{ path('pmtweb_user_profile', {'username': 'Ozmodiar'}) }}">
-                <img class="media-object avatar avatar-medium" src="https://si0.twimg.com/profile_images/3010046075/a4267cf8196b4286f09ae05296a2a0b8_bigger.png">
+                <img class="media-object avatar avatar-medium" src="{{ gravatar('dries2@nousefreak.be') }}">
             </a>
             <div class="media-body">
                 <ul>
