--- a/src/PMT/WebBundle/Resources/views/Project/createForm.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/createForm.html.twig
@@ -20,27 +20,27 @@
                             <div class="accordion-inner">
 
                                 <div class="control-group">
-                                    <label class="control-label" for="summary">
+                                    <div class="control-label">
                                         {{ form_label(form.name) }}
-                                    </label>
+                                    </div>
 
                                     <div class="controls row-fluid">
                                         {{ form_widget(form.name, {'attr': {'class': 'span12' }}) }}
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    <label class="control-label" for="summary">
+                                    <div class="control-label">
                                         {{ form_label(form.code) }}
-                                    </label>
+                                    </div>
 
                                     <div class="controls row-fluid">
                                         {{ form_widget(form.code, {'attr': {'class': 'span12' }}) }}
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    <label class="control-label" for="type">
+                                    <div class="control-label">
                                         {{ form_label(form.description) }}
-                                    </label>
+                                    </div>
 
                                     <div class="controls row-fluid">
                                         {{ form_widget(form.description, {'attr': {'class': 'span12', 'rows': '10' }}) }}
