--- a/src/PMT/WebBundle/Resources/views/Activity/list.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Activity/list.html.twig
@@ -5,7 +5,7 @@
             {% for log in activity %}
                 <li class="media">
                     <a class="pull-left" href="{{ path('pmtweb_user_profile', {'username': log.user}) }}">
-                        <img class="media-object avatar avatar-medium" src="{{ gravatar(log.user.email) }}">
+                        <img class="media-object avatar avatar-medium" src="{{ gravatar(log.user.email) }}" alt="{{ log.user.username }}">
                     </a>
                     <div class="media-body">
                         <ul>
@@ -16,7 +16,7 @@
                                     <a href="{{ path('pmtweb_issue_detail', {'projectCode': log.issue.project.code, 'id': log.issue.id}) }}">{{ log.issue.project.code }}-{{ log.issue.id }} - {{ log.issue.summary }}</a>
                                 </p>
                                 <p>
-                                    <i class="icon-time"></i> <time class="moment" datetime="{{ log.timestamp|date('Y-m-d\TH:i:s') }}"></time>
+                                    <i class="icon-time"></i> <time class="moment" datetime="{{ log.timestamp|date('Y-m-d\\TH:i:sP') }}"></time>
                                 </p>
                             </li>
                         </ul>
@@ -37,7 +37,7 @@
                     <a href="{{ path('pmtweb_user_profile', {'username': 'NoUseFreak'}) }}">Dries De Peuter</a> updated <a href="#">NOTIFIER-2 - Some issue summary</a>
                 </p>
                 <p>
-                    <i class="icon-time"></i> <time class="moment" datetime="2013-06-06T20:00+00:00"></time>
+                    <i class="icon-time"></i> <time class="moment" datetime="{{ 'now'|date('Y-m-d\\TH:i:sP') }}"></time>
                 </p>
             </li>
             <li>
@@ -45,7 +45,7 @@
                     <a href="{{ path('pmtweb_user_profile', {'username': 'NoUseFreak'}) }}">Dries De Peuter</a> updated <a href="#">NOTIFIER-2 - Some issue summary</a>
                 </p>
                 <p>
-                    <i class="icon-time"></i> <time class="moment" datetime="2013-06-13T20:00+00:00"></time>
+                    <i class="icon-time"></i> <time class="moment" datetime="{{ 'now'|date('Y-m-d\\TH:i:sP') }}"></time>
                 </p>
             </li>
         </ul>
