--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -136,7 +136,7 @@
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" href="javascript:void();">
+                        <a class="accordion-toggle">
                             {{ 'issue.actions'|trans }}
                         </a>
                     </div>
@@ -212,11 +212,11 @@
                             <table>
                                 <tr>
                                     <td>{{ 'issue.created'|trans }}:</td>
-                                    <td><time class="moment" datetime="{{ issue.created|date('Y-m-d\TH:i:s') }}"></time></td>
+                                    <td><time class="moment" datetime="{{ issue.created|date('Y-m-d\\TH:i:sP') }}"></time></td>
                                 </tr>
                                 <tr>
                                     <td>{{ 'issue.updated'|trans }}:</td>
-                                    <td><time class="moment" datetime="{{ issue.lastUpdated|date('Y-m-d\TH:i:s') }}"></time></td>
+                                    <td><time class="moment" datetime="{{ issue.lastUpdated|date('Y-m-d\\TH:i:sP') }}"></time></td>
                                 </tr>
                             </table>
                         </div>
