--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -6,9 +6,10 @@
 {% block content_actions %}{% endblock %}
 
 {% block content %}
-    <div class="row-fluid">
-        {{ form_errors(form) }}
-        <form action="{{ path('pmtweb_issue_form') }}" method="post" {{ form_enctype(form) }}>
+    <form action="{{ path('pmtweb_issue_form') }}" method="post" {{ form_enctype(form) }}>
+
+        <div class="row-fluid">
+            {{ form_errors(form) }}
             <div class="span8">
                 <div class="accordion">
                     <div class="accordion-group">
@@ -21,18 +22,18 @@
                             <div class="accordion-inner">
 
                                 <div class="control-group">
-                                    <label class="control-label" for="summary">
+                                    <div class="control-label">
                                         {{ form_label(form.summary) }}
-                                    </label>
+                                    </div>
 
                                     <div class="controls row-fluid">
                                         {{ form_widget(form.summary, {'attr': {'class': 'span12' }}) }}
                                     </div>
                                 </div>
                                 <div class="control-group">
-                                    <label class="control-label" for="type">
+                                    <div class="control-label">
                                         {{ form_label(form.description) }}
-                                    </label>
+                                    </div>
 
                                     <div class="controls row-fluid">
                                         {{ form_widget(form.description, {'attr': {'class': 'span12', 'rows': '10' }}) }}
@@ -40,9 +41,9 @@
                                 </div>
 
                                 <div class="control-group">
-                                    <label class="control-label" for="type">
+                                    <div class="control-label">
                                         {{ form_label(form.tags) }}
-                                    </label>
+                                    </div>
 
                                     <div class="controls row-fluid">
                                         {{ form_widget(form.tags, {'attr': {'class': 'span12'}}) }}
@@ -133,9 +134,9 @@
                             <button type="button" class="btn" onclick="window.history.back();">{{ 'issue.form.cancel'|trans }}</button>
                         </div>
                         <div class="control-group">
-                            <label class="control-label" for="rebuild">
+                            <div class="control-label">
                                 {{ form_label(form.rebuild) }}
-                            </label>
+                            </div>
 
                             <div class="controls">
                                 {{ form_widget(form.rebuild) }}
@@ -145,9 +146,8 @@
                 </div>
             </div>
             {{ form_rest(form) }}
-        </form>
-
-    </div>
+        </div>
+    </form>
 {% endblock %}
 
 {% block body_scripts %}
