--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,8 +1,20 @@
+{% form_theme form _self %}
 {% trans_default_domain 'FOSUserBundle' %}
+
+{#{% block form_errors %}#}
+    {#{% for error in errors %}#}
+        {#<div class="alert alert-error">#}
+            {#<button type="button" class="close" data-dismiss="alert">&times;</button>#}
+            {#{{ error.message }}#}
+        {#</div>#}
+    {#{% endfor %}#}
+{#{% endblock %}#}
 
 <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST"
       class="fos_user_registration_register box-wrapper">
     <h2 class="form-registration-heading">Register</h2>
+
+    {% include 'PMTWebBundle:Form:errors.html.twig' with {'errors': form.vars.errors, 'type': 'error'} %}
 
     {{ form_label(form.username) }}
     {{ form_widget(form.username, { 'attr': {'class': 'input-block-level'} }) }}
@@ -16,6 +28,7 @@
     {{ form_label(form.plainPassword.second) }}
     {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'input-block-level'} }) }}
 
+    {{ form_rest(form) }}
     <div>
         <a class="btn btn-large btn-link pull-right" href="{{ path('pmtweb_dashboard') }}">Back</a>
         <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-large btn-primary"/>
