--- a/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -4,7 +4,7 @@
     <div>
         <h2 class="form-reset-heading">Reset Password</h2>
         {% if invalid_username is defined %}
-            <p>{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}) }}</p>
+            {% include 'PMTWebBundle:Form:errors.html.twig' with {'errors': ['resetting.request.invalid_username'|trans({'%username%': invalid_username})], 'type': 'error'} %}
         {% endif %}
         <label for="username">{{ 'resetting.request.username'|trans }}</label>
         <input type="text" id="username" name="username" required="required" class="input-block-level" />
