--- a/src/PMT/WebBundle/Resources/views/Project/createForm.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/createForm.html.twig
@@ -1,6 +1,7 @@
 {% extends "PMTWebBundle::layout.html.twig" %}
+{% trans_default_domain 'PMTWebBundle' %}
 
-{% block content_title %}{{ 'project.form.new' }}{% endblock %}
+{% block content_title %}{{ 'project.form.new'|trans }}{% endblock %}
 
 {% block content_actions %}{% endblock %}
 
