--- a/src/PMT/WebBundle/Resources/views/layout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/layout.html.twig
@@ -10,15 +10,22 @@
 
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
 
-    <link href="{{ asset('bundles/pmtweb/css/bootstrap.min.css') }}" rel="stylesheet"/>
-    <link href="{{ asset('bundles/pmtweb/vendor/select2/select2.css') }}" rel="stylesheet"/>
-    <link href="{{ asset('bundles/pmtweb/css/select2-bootstrap.css') }}" rel="stylesheet"/>
-    <link href="{{ asset('bundles/pmtweb/css/main.css') }}" rel="stylesheet"/>
+    {% stylesheets
+        '@PMTWebBundle/Resources/public/css/bootstrap.min.css'
+        '@PMTWebBundle/Resources/public/vendor/select2/select2.css'
+        '@PMTWebBundle/Resources/public/css/select2-bootstrap.css'
+        '@PMTWebBundle/Resources/public/css/main.css'
+        filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
 
-    <script type="text/javascript" src="{{ asset('bundles/pmtweb/js/jquery.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/pmtweb/vendor/select2/select2.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/pmtweb/vendor/momentjs/moment.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/pmtweb/js/main.js') }}"></script>
+    {% javascripts
+        '@PMTWebBundle/Resources/public/js/jquery.min.js'
+        '@PMTWebBundle/Resources/public/vendor/select2/select2.min.js'
+        '@PMTWebBundle/Resources/public/vendor/momentjs/moment.min.js'
+        '@PMTWebBundle/Resources/public/js/main.js' %}
+        <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
     <script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', '{{ google_analytics_property_id }}']);
