Fix error handling unauthenticated

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,4 +1,4 @@
-{% extends "PMTWebBundle::layout.html.twig" %}
+{% extends "PMTWebBundle::emptyLayout.html.twig" %}
 {% trans_default_domain 'PMTWebBundle' %}
 
 {% block content_title %}Page not found{% endblock %}
